--- a/package.json
+++ b/package.json
@@ -21,19 +21,62 @@
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/email-composer": "^4.5.0",
+    "@ionic-native/fingerprint-aio": "^4.5.0",
+    "@ionic-native/in-app-browser": "^4.5.0",
+    "@ionic-native/screenshot": "^4.5.0",
+    "@ionic-native/social-sharing": "^4.5.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.16",
-    "@ionic/storage": "2.1.3",
+    "@ionic/storage": "^2.1.3",
+    "angularfire2": "^4.0.0-rc.1",
+    "com.darktalker.cordova.screenshot": "^0.1.6",
+    "cordova-android": "6.3.0",
+    "cordova-ios": "4.5.4",
+    "cordova-plugin-add-swift-support": "^1.7.0",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-email-composer": "^0.8.11",
+    "cordova-plugin-fingerprint-aio": "^1.3.3",
+    "cordova-plugin-inappbrowser": "^1.7.2",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-plugin-x-socialsharing": "^5.2.1",
+    "cordova-sqlite-storage": "^2.1.2",
+    "es6-promise-plugin": "^4.1.0",
+    "firebase": "^3.9.0",
+    "highcharts": "^6.0.3",
     "ionic-angular": "3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.5",
+    "@ionic/app-scripts": "^3.1.5",
+    "@types/request": "2.0.8",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-sqlite-storage": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-email-composer": {},
+      "com.darktalker.cordova.screenshot": {},
+      "cordova-plugin-fingerprint-aio": {},
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-x-socialsharing": {}
+    },
+    "platforms": [
+      "android",
+      "ios"
+    ]
+  }
 }
