--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "angularfire2": "^4.0.0-rc.1",
     "com.darktalker.cordova.screenshot": "^0.1.6",
     "cordova-android": "6.3.0",
-    "cordova-ios": "4.5.4",
+    "cordova-browser": "^5.0.1",
+    "cordova-ios": "^4.5.4",
     "cordova-plugin-add-swift-support": "^1.7.0",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-email-composer": "^0.8.11",
@@ -75,8 +76,9 @@
       "cordova-plugin-x-socialsharing": {}
     },
     "platforms": [
+      "android",
       "ios",
-      "android"
+      "browser"
     ]
   }
 }
